--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,25 @@
         <param-value>mysql_pwd</param-value>
     </context-param>
 
+    <filter>
+        <filter-name>RequestLoggingFilter</filter-name>
+        <filter-class>com.mediga.filter.RequestLoggingFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>com.mediga.filter.AuthenticationFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>RequestLoggingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <display-name>ServletCookieExample</display-name>
     <welcome-file-list>
         <welcome-file>login.html</welcome-file>
